# hypothesis_poc

./: README.rst  pyproject.toml
hypothesis_poc/: __main__.py  divrem.py
tests/: test_hypothesis_poc.py  test_hypothesis_poc_divrem.py
