[tool.poetry]
name = "hypothesis_poc"
version = "0.1.0"
description = ""
authors = ["Matthew Raspberry <3092450+mraspberry@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "^6.36.0"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "artifactory"
url = "https://ramseysolutions.jfrog.io/artifactory/api/pypi/pypi/simple"
default = true
